fix(modal): align items to avoid stretching them

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -72,6 +72,7 @@
 .modal__buttons {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 0.5rem;
   padding: 1.5rem 1.5rem 1.5rem 0.5rem;
 }
